Add favicon, start work on portfolio

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "bearupstairs",
+  "name": "Bear Upstairs Web Design",
   "icons": [
     {
       "src": "favicon.ico",
